--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,6 +3,7 @@
 <div class="row justify-content-center  ">
     <div class="col-sm-10 col-md-8 col-lg-6">
         <form id="post_form" method="POST" action="/edit/{{ post.id }}">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div>
                 <label for="title" class="form-label">Başlık</label><br>
                 <input type="text" id="title" name="title" value="{{ post.title }}" class="form-control"><br>
