--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,20 +9,23 @@
     <ul class="dropdown-menu">
     <li><h5 class="dropdown-header">İsim değiştirme</h5></li>
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <li><input type="text" id="new_username" name="new_username" class="dropdown-item; form-control"></li>
         <li><button type="submit" class="dropdown-item; btn btn-outline-dark">İsim Değiştir</button></li>
     </form>
     <form method="POST">
-      <li><h5 class="dropdown-header">Şifre değiştirme</h5></li>
-      <li><h5 class="dropdown-header">Şifre</h5></li>
-      <li><input type="text" id="password" name="password" class="dropdown-item; form-control" ></input></li>
-      <li><h5 class="dropdown-header">Yeni Şifre</h5></li>
-      <li><input type="text" id="new_password" name="new_password" class="dropdown-item; form-control" ></input></li>
-      <li><button type="submit" class="dropdown-item; btn btn-outline-dark">Şifre Değiştir</button></li>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <li><h5 class="dropdown-header">Şifre değiştirme</h5></li>
+        <li><h5 class="dropdown-header">Şifre</h5></li>
+        <li><input type="text" id="password" name="password" class="dropdown-item; form-control" ></input></li>
+        <li><h5 class="dropdown-header">Yeni Şifre</h5></li>
+        <li><input type="text" id="new_password" name="new_password" class="dropdown-item; form-control" ></input></li>
+        <li><button type="submit" class="dropdown-item; btn btn-outline-dark">Şifre Değiştir</button></li>
     </form>
     <li><h5 class="dropdown-header">kullanıcı silme</h5></li>
     <form method="POST" action="/delete_user">
-    <li><button type="submit" name="delete_user" value="{{ user.id }}" class="dropdown-item; btn btn-outline-dark">Sil</button></li>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <li><button type="submit" name="delete_user" value="{{ user.id }}" class="dropdown-item; btn btn-outline-dark">Sil</button></li>
     </form>
     </ul>
 </div>
