--- a/templates/show_post.html
+++ b/templates/show_post.html
@@ -10,6 +10,7 @@
 </div>
 <div class="container">
     <form method="POST">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <label for="comment"></label>
         <textarea id="comment" name="comment" class="form-control"></textarea><br>
         <button id="submit" class="btn btn-outline-dark" >Yorum yap</button>
